# cvulkanwin32

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  haikal.toml  test.txt  vvl.nix
assets/shaders/: shader.vert  shader.vert.spv
source/: base.hh  core.h  fileops.c  fileops.h  main.c  main.cc  main.cpp
source/shaders/: shader.vert.spv
